--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-  <head> </head>
+  <head>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <script src="/js/app.js"></script>
+  </head>
 
   <body>
     <h1>about</h1>
+    <img src="/img/angels.jpg" alt="angels" />
   </body>
 </html>
